Bug 1865747 [Linux] Unset GBM_BACKEND=nvidia on non-NVIDIA hardware r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D211964